Do not return facts on create/post
